# foreman

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  architecture-review.md  pyproject.toml
foreman/: __init__.py  analyze.py  analyzer.py  brain.py  cli.py  config.py  coordination.py  dashboard.py  innovate.py  loop.py  merge.py  monitor.py  observer.py  plan_parser.py  preflight.py  resolver.py  scheduler.py  spawner.py  watchdog.py  web.py  worktree.py
foreman-vscode/: package-lock.json  package.json
plans/: 00-fix-review-agent-crash.md  00-review-failure-should-not-re-implement.md  01-review-verdict-case-insensitive.md  01-web-path-traversal-fix.md  02-launcher-exit-trap.md  03-observer-merge-lock.md  05-runtime-failure-awareness.md  09-smart-resume-web-ui.md  11-plan-priority-web-ui.md  12-observer-use-agenttype-enum.md  13-observer-check-all-statuses.md  14-observer-restart-backoff.md  15-observer-verify-restart.md  16-observer-cleanup-after-merge.md  18-pid-file-leak-fix.md  19-plan-watcher-error-handling.md  21-deduplicate-read-exit-code.md  22-plan-deletion-db-sync.md  23-dag-completed-deps.md  25-pause-disarm-stuck-detector.md  26-web-log-streaming.md  27-web-draft-caching.md  28-web-header-refresh.md  29-web-resume-via-loop.md  30-web-innovate-concurrency.md  architecture-cleanup.md  db-transaction-safety.md  draft-agent-exit.md  draft-analyze-command.md  draft-fix-self-restart-under-uv.md  draft-innovator.md  draft-reliability-fixes.md  foreman-observer.md  foreman-web-ui.md  innovator-backpressure.md  innovator-restart-safety.md  (+13 more)
(+8 files in other folders)
