[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman"
version = "0.1.0"
description = "AI agent orchestrator for parallel Claude Code execution"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.0",
    "rich>=13.0",
    "asyncinotify>=4.0",
]

[project.scripts]
foreman = "foreman.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["foreman"]

[tool.hatch.build.targets.wheel.force-include]
"foreman/templates" = "foreman/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
